# serializer version: 1
# name: test_number_snapshot[number.test_number_down_movement_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 240,
      'min': 4,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_down_movement_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Down-movement duration',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'down_time',
    'unique_id': '00055511EECC-1-3',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_number_snapshot[number.test_number_down_movement_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Test Number Down-movement duration',
      'max': 240,
      'min': 4,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_down_movement_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '57.0',
  })
# ---
# name: test_number_snapshot[number.test_number_down_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_down_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Down position',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'down_position',
    'unique_id': '00055511EECC-1-1',
    'unit_of_measurement': '%',
  })
# ---
# name: test_number_snapshot[number.test_number_down_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Number Down position',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_down_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100.0',
  })
# ---
# name: test_number_snapshot[number.test_number_down_slat_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 75,
      'min': -75,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_down_slat_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Down slat position',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'down_slat_position',
    'unique_id': '00055511EECC-1-2',
    'unit_of_measurement': '°',
  })
# ---
# name: test_number_snapshot[number.test_number_down_slat_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Number Down slat position',
      'max': 75,
      'min': -75,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': '°',
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_down_slat_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '38.0',
  })
# ---
# name: test_number_snapshot[number.test_number_end_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 130,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_end_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'End position',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'endposition_configuration',
    'unique_id': '00055511EECC-1-4',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_snapshot[number.test_number_end_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Number End position',
      'max': 130,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_end_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '129.0',
  })
# ---
# name: test_number_snapshot[number.test_number_maximum_slat_angle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 127,
      'min': -127,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_maximum_slat_angle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Maximum slat angle',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'slat_max_angle',
    'unique_id': '00055511EECC-1-9',
    'unit_of_measurement': '°',
  })
# ---
# name: test_number_snapshot[number.test_number_maximum_slat_angle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Number Maximum slat angle',
      'max': 127,
      'min': -127,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': '°',
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_maximum_slat_angle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75.0',
  })
# ---
# name: test_number_snapshot[number.test_number_minimum_slat_angle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 127,
      'min': -127,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_minimum_slat_angle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Minimum slat angle',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'slat_min_angle',
    'unique_id': '00055511EECC-1-10',
    'unit_of_measurement': '°',
  })
# ---
# name: test_number_snapshot[number.test_number_minimum_slat_angle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Number Minimum slat angle',
      'max': 127,
      'min': -127,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': '°',
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_minimum_slat_angle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-75.0',
  })
# ---
# name: test_number_snapshot[number.test_number_motion_alarm_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 15300,
      'min': 1,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_motion_alarm_delay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Motion alarm delay',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'motion_alarm_cancelation_delay',
    'unique_id': '00055511EECC-1-5',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_number_snapshot[number.test_number_motion_alarm_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Test Number Motion alarm delay',
      'max': 15300,
      'min': 1,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_motion_alarm_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_number_snapshot[number.test_number_polling_interval-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 45,
      'min': 5,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_polling_interval',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Polling interval',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'polling_interval',
    'unique_id': '00055511EECC-1-7',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_number_snapshot[number.test_number_polling_interval-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Test Number Polling interval',
      'max': 45,
      'min': 5,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5.0,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_polling_interval',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_number_snapshot[number.test_number_slat_steps-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 20,
      'min': 1,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_slat_steps',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Slat steps',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'slat_steps',
    'unique_id': '00055511EECC-1-11',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_snapshot[number.test_number_slat_steps-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Number Slat steps',
      'max': 20,
      'min': 1,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_slat_steps',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6.0',
  })
# ---
# name: test_number_snapshot[number.test_number_slat_turn_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 24,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_slat_turn_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Slat turn duration',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'shutter_slat_time',
    'unique_id': '00055511EECC-1-8',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_number_snapshot[number.test_number_slat_turn_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Test Number Slat turn duration',
      'max': 24,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_slat_turn_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.6',
  })
# ---
# name: test_number_snapshot[number.test_number_temperature_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 128,
      'min': -5,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_temperature_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Temperature offset',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_offset',
    'unique_id': '00055511EECC-1-12',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_number_snapshot[number.test_number_temperature_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Number Temperature offset',
      'max': 128,
      'min': -5,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_temperature_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_number_snapshot[number.test_number_threshold_for_wind_trigger-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 22.5,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 2.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_threshold_for_wind_trigger',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Threshold for wind trigger',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wind_monitoring_state',
    'unique_id': '00055511EECC-1-16',
    'unit_of_measurement': <UnitOfSpeed.METERS_PER_SECOND: 'm/s'>,
  })
# ---
# name: test_number_snapshot[number.test_number_threshold_for_wind_trigger-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'wind_speed',
      'friendly_name': 'Test Number Threshold for wind trigger',
      'max': 22.5,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 2.5,
      'unit_of_measurement': <UnitOfSpeed.METERS_PER_SECOND: 'm/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_threshold_for_wind_trigger',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5.0',
  })
# ---
# name: test_number_snapshot[number.test_number_up_movement_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 240,
      'min': 4,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_up_movement_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Up-movement duration',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'up_time',
    'unique_id': '00055511EECC-1-13',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_number_snapshot[number.test_number_up_movement_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Test Number Up-movement duration',
      'max': 240,
      'min': 4,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_up_movement_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '57.0',
  })
# ---
# name: test_number_snapshot[number.test_number_wake_up_interval-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 7200,
      'min': 30,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 30.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_wake_up_interval',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Wake-up interval',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wake_up_interval',
    'unique_id': '00055511EECC-1-14',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_number_snapshot[number.test_number_wake_up_interval-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Test Number Wake-up interval',
      'max': 7200,
      'min': 30,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 30.0,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_wake_up_interval',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '600.0',
  })
# ---
# name: test_number_snapshot[number.test_number_window_open_sensibility-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 3,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_number_window_open_sensibility',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Window open sensibility',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'open_window_detection_sensibility',
    'unique_id': '00055511EECC-1-6',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_snapshot[number.test_number_window_open_sensibility-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Number Window open sensibility',
      'max': 3,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_number_window_open_sensibility',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.0',
  })
# ---
